Implementado documentação swagger de users e auth
